--- a/sys.config
+++ b/sys.config
@@ -1,24 +1,11 @@
 [
-    {maria, [
-        {markets, all},
-        {currencies_auto_fetch, #{
-            default => #{wp => false, ws => false},
-            {btc, usd} => true
-        }},
-        {market_bitstamp, [
-			{ballances_autofetcher, #{default => true}},
-			{remote_orders_autofetcher, #{default => true}},
-            {currencies_auto_fetch, #{
-                aave => on_demand
-            }}
-        ]}
-    ]},
     {mcluster, [
 		{nodes_specs, #{
 			'maria@mutty' => #{
 				primary_codebase => maria,
+				auto_connect_to_nodes_with_roles => [kawbo_gql],
 				roles => [maria],
-				runtime_env => dev,
+				cluster_id => dev,
 				kawbo_gql => #{},
 				maria => #{
 					markets => [bitstamp]
@@ -26,8 +13,9 @@
 			},
 			'pedro@mutty' => #{
 				primary_codebase => maria,
+				auto_connect_to_nodes_with_roles => [maria],
 				roles => [maria],
-				runtime_env => dev,
+				cluster_id => dev,
 				kawbo_gql => #{},
 				maria => #{
 					markets => none
@@ -35,8 +23,9 @@
 			},
 			'kawbo@mutty' => #{
 				primary_codebase => kawbo,
+				auto_connect_to_nodes_with_roles => [maria],
 				roles => [kawbo_gql],
-				runtime_env => dev,
+				cluster_id => dev,
 				kawbo_gql => #{},
 				maria => #{
 					markets => [bitstamp]
@@ -44,26 +33,5 @@
 			}
 		}},
         {table_loading_timeout, 30000}
-    ]},
-    {sync, [
-        {src_dirs, {add, [{"deps/mcluster/src", [{outdir, "deps/mcluster/ebin/"}]}]}}
-    ]},
-	{kernel, [
-		{logger_level, debug},
-		{logger, [
-			{handler, default, logger_std_h, #{
-				formatter => {mlogs, #{
-					colored => true,
-					meta_modifiers => [
-						{mlogs, add_timestamp, [timestamp]},
-						{mlogs, add_node, [node]}
-					],
-					exclude_meta_fields => [time, gl, domain, file]
-				}}
-			}}
-		]}
-	]},
-	{systemd, [
-		{auto_formatter, false}
-	]}
+    ]}
 ].
