more cluster playground

--- a/sys.config
+++ b/sys.config
@@ -3,7 +3,7 @@
 		{nodes_specs, #{
 			'maria@mutty' => #{
 				primary_codebase => maria,
-				auto_connect_to_nodes_with_roles => [kawbo_gql],
+				auto_connect_to_nodes_with_roles => [],
 				roles => [maria],
 				cluster_id => dev,
 				kawbo_gql => #{},
@@ -30,6 +30,12 @@
 				maria => #{
 					markets => [bitstamp]
 				}
+			},
+			'mcluster@mutty' => #{
+				primary_codebase => mcluster,
+				auto_connect_to_nodes_with_roles => [maria, kawbo_gql],
+				roles => [mcluster],
+				cluster_id => dev
 			}
 		}},
         {table_loading_timeout, 30000}
