--- a/sys.config
+++ b/sys.config
@@ -1,7 +1,7 @@
 [
     {mcluster, [
 		{nodes_specs, #{
-			'maria@mutty' => #{
+			'maria@dev' => #{
 				primary_codebase => maria,
 				auto_connect_to_nodes_with_roles => [],
 				roles => [maria],
@@ -11,7 +11,7 @@
 					markets => [bitstamp]
 				}
 			},
-			'pedro@mutty' => #{
+			'pedro@dev' => #{
 				primary_codebase => maria,
 				auto_connect_to_nodes_with_roles => [maria],
 				roles => [maria],
@@ -21,7 +21,7 @@
 					markets => none
 				}
 			},
-			'kawbo@mutty' => #{
+			'kawbo@dev' => #{
 				primary_codebase => kawbo,
 				auto_connect_to_nodes_with_roles => [maria],
 				roles => [kawbo_gql],
@@ -31,7 +31,7 @@
 					markets => [bitstamp]
 				}
 			},
-			'mcluster@mutty' => #{
+			'mcluster@dev' => #{
 				primary_codebase => mcluster,
 				auto_connect_to_nodes_with_roles => [maria, kawbo_gql],
 				roles => [mcluster],
